--- a/public/Mine_Sweeper_Nav/styles.css
+++ b/public/Mine_Sweeper_Nav/styles.css
@@ -24,9 +24,8 @@ table {
     text-align: center;
 }
 
-.n0 {
+/* .n0 {
     background-image: none;
-    background-color: rgb(39, 0, 0);
 }
 .n1 {
     background-image: url('number_textures/1.png');
@@ -41,5 +40,5 @@ table {
     background-image: url('number_textures/4.png');
 }
 .bombs {
-    background-image: url('number_textures/bomb.png');
-}
+    background-image: url('number_textures/bombs.png');
+} */
