--- a/public/Mine_Sweeper_Nav/styles.css
+++ b/public/Mine_Sweeper_Nav/styles.css
@@ -1,22 +1,99 @@
-html, body, #flex_box, .cells {
+html, body, #game_flex, #grid, .cells {
     margin: 0px;
     padding: 0px;
 }
 
-#flex_box {
+body {
+    width: 100vw;
+    height: 100vh;
+    background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+}
+
+#game_flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    background-color: lightgray;
+    border-radius: 20px;
+    width: 95vw;
+    height: 95vh;
+    overflow: hidden;
+}
+
+#counter_bar {
+    width: 100%;
+    height: 10%;
+    background-color: rgb(168, 167, 167);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#counter_value {
+    width: 200px;
+    /* padding: 10px; */
+    height: 65%;
     background-color: black;
+    color: red;
+    font-family: sans-serif;
+    text-align: center;
+    /* font-size: large; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#flag_box {
+    width: 100%;
+    height: 10%;
+    background-color: rgb(168, 167, 167);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#flag_toggle {
+    height: 60px;
+    width: 100px;
+    background-color: lightgray;
+    border-radius: 30px;
+    box-sizing: border-box;
+    padding: 5px;
+    display: flex;
+    justify-content: flex-start;
+    transition: justify-content 1s ease;
+}
+#flag_box::before {
+    height: 60px;
+    content: "";
+    background-size: cover;
+    aspect-ratio: 1/1;
+    background-image: url("number_textures/flag.png");
+}
+#toggle_circle {
+    height: 100%;
+    aspect-ratio: 1/1;
+    background-color: white;
+    border-radius: 50%;
+}
+
+#grid {
+    display: flex;
+    flex-grow: 2;
+    justify-content: center;
+    align-items: center;
+    height: 55vh;
+    width: 100%;
 }
 
 table {
-    /* background-color: grey; */
+    background-color: grey;
     /* opacity: 0; */
     /* transform: scale(0); */
-    border-spacing: 0px;
+    /* border-spacing: 3px; */
     transition: opacity 2s ease, transform 2s ease;
 }
 
