--- a/public/Mine_Sweeper_Nav/styles.css
+++ b/public/Mine_Sweeper_Nav/styles.css
@@ -3,6 +3,10 @@ html, body, #game_flex, #grid, .cells {
     padding: 0px;
 }
 
+html, body, #game_flex {
+    min-height: 500px;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -24,9 +28,10 @@ body {
     overflow: hidden;
 }
 
-#counter_bar {
+#counter_bar, #flag_box {
     width: 100%;
     height: 10%;
+    min-height: 75px;
     background-color: rgb(168, 167, 167);
     display: flex;
     justify-content: center;
@@ -43,16 +48,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: xx-large;
 }
 
-#flag_box {
-    width: 100%;
-    height: 10%;
-    background-color: rgb(168, 167, 167);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 #flag_toggle {
     height: 60px;
     width: 100px;
@@ -85,10 +83,10 @@ body {
     align-items: center;
     height: 55vh;
     width: 100%;
+    overflow: hidden;
 }
 
 table {
-    background-color: grey;
     transition: opacity 2s ease, transform 2s ease;
 }
 
@@ -97,28 +95,32 @@ table {
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
-    font-size: 15pt;
     text-align: center;
     transition: border-color 1s, background-color 1s, background-size 1s, transform 1s ease, opacity 2s ease;
     transform: scale(0);
 }
 
-
-/* .n0 {
-    background-image: none;
+#play_again {
+    position: absolute;
+    background-color: black;
+    width: clamp(150px, 60vw, 250px);
+    height: clamp(300px, 60vh, 400px);
+    z-index: 3;
+    border-radius: 10px;
+    box-shadow: 0px 0px 3px 3px lime;
+    /* display: flex; */
+    display: none;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
 }
-.n1 {
-    background-image: url('number_textures/1.png');
+.end_button {
+    width: 80%;
+    height: fit-content;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
-.n2 {
-    background-image: url('number_textures/2.png');
+#you_win {
+    color: white;
+    border-bottom: 2px solid white;
 }
-.n3 {
-    background-image: url('number_textures/3.png');
-}
-.n4 {
-    background-image: url('number_textures/4.png');
-}
-.bombs {
-    background-image: url('number_textures/bombs.png');
-} */
