--- a/public/Mine_Sweeper_Nav/styles.css
+++ b/public/Mine_Sweeper_Nav/styles.css
@@ -28,21 +28,38 @@ body {
     overflow: hidden;
 }
 
-#counter_bar, #flag_box {
+#counter_bar {
     width: 100%;
     height: 10%;
     min-height: 75px;
-    background-color: rgb(168, 167, 167);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+#flag_box {
+    width: 100%;
+    height: 10%;
+    min-height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.color_mode {
+    height: 65%;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+     margin: 0px 20px;
+}
+#placeholder {
+    height: 65%;
+    aspect-ratio: 1/1;
+    background-color: red;
 }
 
 #counter_value {
     width: 200px;
     height: 65%;
     background-color: black;
-    color: red;
     font-family: sans-serif;
     text-align: center;
     display: flex;
@@ -54,7 +71,6 @@ body {
 #flag_toggle {
     height: 60px;
     width: 100px;
-    background-color: lightgray;
     border-radius: 30px;
     box-sizing: border-box;
     padding: 5px;
@@ -72,7 +88,6 @@ body {
 #toggle_circle {
     height: 100%;
     aspect-ratio: 1/1;
-    background-color: white;
     border-radius: 50%;
 }
 
@@ -91,10 +106,8 @@ table {
 }
 
 .cells {
-    background-color: rgb(148, 148, 148);
     background-size: cover;
     background-repeat: no-repeat;
-    color: white;
     text-align: center;
     transition: border-color 1s, background-color 1s, background-size 1s, transform 1s ease, opacity 2s ease;
     transform: scale(0);
@@ -107,7 +120,7 @@ table {
     height: clamp(300px, 60vh, 400px);
     z-index: 3;
     border-radius: 10px;
-    box-shadow: 0px 0px 3px 3px lime;
+    /* box-shadow: 0px 0px 3px 3px lime; */
     /* display: flex; */
     display: none;
     justify-content: space-evenly;
