--- a/public/Mine_Sweeper_Nav/styles.css
+++ b/public/Mine_Sweeper_Nav/styles.css
@@ -78,7 +78,8 @@ body {
     justify-content: flex-start;
     transition: justify-content 1s ease;
 }
-#flag_box::before {
+/* #flag_box::before { */
+#flag_icon {
     height: 60px;
     content: "";
     background-size: cover;
