--- a/public/Landing_Page/styles.css
+++ b/public/Landing_Page/styles.css
@@ -25,13 +25,13 @@ body {
 }
 
 #project_box {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px auto;
     width: 55%;
     height: fit-content;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 25px;
 }
 
 .project {
@@ -39,7 +39,6 @@ body {
     aspect-ratio: 2/1;
     border-radius: 30px;
     background-color: black ;
-    margin: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,7 +53,6 @@ body {
 a {
     text-decoration: none;
     font-size: 20pt;
-    padding: 5px;
     text-align: center;
     color: white;
 }
