--- a/public/MongoDB_Demo/styles.css
+++ b/public/MongoDB_Demo/styles.css
@@ -7,23 +7,120 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: black;
+    font-family: sans-serif;
+}
+
+#page {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#page_header_section {
+    width: 100%;
+    height: fit-content;
+    flex-shrink: 0;
+    padding: 25px;
+    background-color: maroon;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+}
+#page_header_section > h1 {
+    color: white;
+    font-size: 30pt;
+}
+
+#search_and_results_box {
+    position: relative;
+    width: 100%;
+    height: auto;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+}
+
+/* Search panel and form styles */
+#search_panel {
+    width: 25%;
+    height: 100%;
+    background-color: gray;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 form {
+    height: fit-content;
     border: 1px solid white;
-    margin: 10px;
     padding: 10px;
-    width: fit-content;
+}
+
+.form_section {
+    margin-bottom: 30px;
 }
 
 label {
+    font-size: 16pt;
     color: white;
 }
 
-#output_box {
-    width: 300px;
-    height: 150px;
-    background-color: white;
-    color: navy;
-    font-size: 20pt;
+#department_section {
+    padding: 10px;
+}
+
+.radio_label {
+    font-size: 15pt;
+}
+
+input[type="text"], input[type="number"] {
+    font-size: 16pt;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+#submit_btn_box {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+button[type="submit"] {
+    width: 75%;
+    height: fit-content;
+    font-size: 15pt;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 10px;
+}
+button[type="submit"]:hover {
+    background-color: rgb(32, 32, 32);
+    cursor: pointer;
+}
+
+/* Results section styles */
+#results_section {
+    width: 100%;
+    height: 100%;
+    background-color: lightgray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px 0px;
+    overflow-y: auto;
+    box-sizing: border-box;
+}
+
+.result {
+    width: 75%;
+    height: 200px;
+    flex-shrink: 0;
+    background-color: rgb(240, 240, 240);
+    border-radius: 10px;
 }
