Delete functionality complete

--- a/public/MongoDB_Demo/styles.css
+++ b/public/MongoDB_Demo/styles.css
@@ -127,14 +127,37 @@ button[type="submit"]:hover {
     overflow: hidden;
 }
 
-.res_name_section {
+/* Top section of result styles */
+.res_top_section {
+    width: 100%;
+    height: 65px;
     background-color: rgb(223, 223, 223);
-    font-size: 16pt;
-    color: green;
     padding: 10px;
-    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    box-sizing: border-box;
 }
 
+.res_name_section {
+    font-weight: bold;
+    font-size: 16pt;
+    color: green;
+    flex-grow: 1;
+}
+
+.update_btn, .delete_btn {
+    height: 100%;
+    aspect-ratio: 1/1;
+    background-size: cover;
+    flex-grow: 0;
+}
+.update_btn:hover, .delete_btn:hover {
+    background-color: yellow;
+    cursor: pointer;
+}
+
+/* Bottom section of result styles */
 .res_data_section {
     height: auto;
     font-size: 15pt;
