--- a/public/Clock/styles.css
+++ b/public/Clock/styles.css
@@ -2,6 +2,11 @@
     --digit-font-size: 205px;
     --space_between_digits: 10px;
     --digit-gap-in-column: 5px;
+
+    --accent-color: white;
+    --background-color: black;
+    --icon-filter: invert(100%) sepia(1%) saturate(4579%) hue-rotate(177deg) brightness(111%) contrast(101%);
+    --hover-color: rgb(30, 30, 30);
 }
 
 * {
@@ -12,7 +17,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: var(--background-color);
 }
 
 #page {
@@ -21,6 +26,26 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#mode_btn {
+    width: 100px;
+    aspect-ratio: 1/1;
+    position: absolute;
+    /* border: 1px solid var(--accent-color); */
+    border-radius: 10px;
+    margin: 20px;
+}
+#mode_btn:hover {
+    background-color: var(--hover-color);
+    cursor: pointer;
+}
+
+#mode_icon {
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    filter: var(--icon-filter);
 }
 
 #clock_box {
@@ -45,7 +70,7 @@ body {
 
 .digit {
     font-family: monospace;
-    color: white;
+    color: var(--accent-color);
     font-size: var(--digit-font-size);
     line-height: var(--digit-font-size);
     text-align: center;
