Added create edge button

--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -69,18 +69,31 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
 }
 
-#create_node_btn {
-    font-size: 30pt;
-    width: 50px;
-    line-height: 50px;
-    aspect-ratio: 1/1;
+.ctrl_btn {
     border-radius: 5px;
     border: 1px solid black;
     text-align: center;
 }
+
+#create_node_btn {
+    width: 50px;
+    line-height: 50px;
+    aspect-ratio: 1/1;
+    font-size: 30pt;
+}
 #create_node_btn:hover {
+    background-color: yellow;
+    cursor: pointer;
+}
+
+#create_edge_btn {
+    font-size: 25pt;
+    padding: 10px;
+}
+#create_edge_btn:hover {
     background-color: yellow;
     cursor: pointer;
 }
@@ -98,4 +111,7 @@ body {
 .node:hover {
     background-color: green;
     cursor: move;
+}
+
+#edge_canvas {
 }
