--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -115,3 +115,14 @@ body {
 
 #edge_canvas {
 }
+
+.edge {
+    background-color: purple;
+    position: absolute;
+    z-index: 4;
+    transform-origin: center;
+    transition: transform 2s;
+}
+.edge:hover {
+    background-color: red;
+}
