--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -126,3 +126,11 @@ body {
 .edge:hover {
     background-color: red;
 }
+
+.create_edge_start {
+    box-shadow: 0px 0px 3px 3px green;
+}
+
+.create_edge_end {
+    box-shadow: 0px 0px 3px 3px red;
+}
