Can label nodes

--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -109,6 +109,7 @@ body {
     height: auto;
     padding: 10px;
     box-sizing: border-box;
+    display: none;
 }
 
 /* Preview Section Styles */
