--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -84,13 +84,13 @@ body {
     text-align: center;
 }
 
-#create_node_btn {
+#create_node_btn, #delete_node_btn {
     width: 50px;
     line-height: 50px;
     aspect-ratio: 1/1;
     font-size: 30pt;
 }
-#create_node_btn:hover {
+#create_node_btn:hover, #delete_node_btn:hover {
     background-color: yellow;
     cursor: pointer;
 }
@@ -126,13 +126,12 @@ body {
     align-items: center;
     font-size: 20pt;
     font-family: sans-serif;
+    text-wrap: wrap;
+    text-align: center;
 }
 .node:hover {
     background-color: green;
     cursor: move;
-}
-
-#edge_canvas {
 }
 
 .edge {
