--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -145,10 +145,17 @@ body {
     background-color: red;
 }
 
+/* Style applied to the start node of edge creation */
 .create_edge_start {
     box-shadow: 0px 0px 3px 3px green;
 }
 
+/* Style applied to the end nodes of edge creation */
 .create_edge_end {
+    box-shadow: 0px 0px 3px 3px blue;
+}
+
+/* Style applied to each node when delete mode is activated */
+.delete_node {
     box-shadow: 0px 0px 3px 3px red;
 }
