--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -112,6 +112,23 @@ body {
     display: none;
 }
 
+#adj_matrix {
+    width: 100%;
+    padding: 5px;
+    aspect-ratio: 1/1;
+    text-align: center;
+    border-spacing: 0px;
+    font-size: 20pt;
+}
+th {
+    color: black;
+}
+td {
+    background-color: rgb(78, 78, 78);
+    color: white;
+    border: 1px solid black;
+}
+
 /* Preview Section Styles */
 .node {
     width: var(--node-size);
