--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -2,6 +2,7 @@
     --node-size: 100px;
     --node-z-index: 3;
     --edge-thickness: 5px;
+    --edge-color: purple;
 }
 
 * {
@@ -53,6 +54,7 @@ body {
 #preview_section {
     width: 100%;
     height: 100%;
+    background-color: white;
     overflow: hidden;
     position: relative;
 }
@@ -152,10 +154,10 @@ td {
 }
 
 .edge {
-    background-color: purple;
+    background-color: var(--edge-color);
     position: absolute;
     height: var(--edge-thickness);
-    z-index: 2;
+    z-index: 4;
     transform-origin: center;
 }
 .edge:hover {
@@ -175,4 +177,15 @@ td {
 /* Style applied to each node when delete mode is activated */
 .delete_node {
     box-shadow: 0px 0px 3px 3px red;
+}
+
+.weight_label {
+    background-color: var(--edge-color);
+    color: white;
+    padding: 0px 5px;
+    width: fit-content;
+    height: fit-content;
+    font-size: 20pt;
+    position: absolute;
+    z-index: 5;
 }
