--- a/public/Graph_Creator/styles.css
+++ b/public/Graph_Creator/styles.css
@@ -189,4 +189,57 @@ td {
     position: absolute;
     z-index: 3;
     border-radius: 3px;
+}  
+
+/* Prompt Section Styles */
+#prompt_section {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.658);
+    /* display: flex; */
+    justify-content: center;
+    align-items: center;
+    display: none;
+    z-index: 10;
+}
+
+#prompt_box {
+    width: 500px;
+    height: auto;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+#prompt_message {
+    width: 100%;
+    height: auto;
+    background-color: rgb(228, 228, 228);
+    padding: 30px;
+    box-sizing: border-box;
+    font-size: 15pt; 
+}
+
+#prompt_button_box {
+    width: 100%;
+    height: 50%;
+    background-color: rgb(194, 194, 194);
+    padding: 30px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.prompt_btn {
+    width: 25%;
+    padding: 20px;
+    font-size: 15pt;
+}
+.prompt_btn:hover {
+    cursor: pointer;
 }
